# OpenSimula

./: CLAUDE.md  CNAME  Component 1.json  Proyecto_1.json  Python_Libraries.txt  README.md  bdd_project.xlsx  build_information.txt  debug.py  debug_case_610.py  debug_case_960.py  debug_case_960_interior_window.py  debug_case_960_virtual.py  example_opensimula.py  llms.txt  main.py  makefile  mkdocs.yml  prueba_vedo_animation.py  pyproject.toml  pyproject_old.toml  requirements.txt  structure_tests.ipynb  structure_tests.py  temp_opensimula.ipynb  test_Project.py  test_Simulation.py  test_opensimula.ipynb  test_opensimula.py
.github/: copilot-instructions.md
ashrae_140/: ASHRAE_140_CASE_600.ipynb  ASHRAE_140_CASE_600_test_results.ipynb  ASHRAE_140_CASE_610_test_results.ipynb  ASHRAE_140_CASE_620_test_results.ipynb  ASHRAE_140_CASE_640_test_results.ipynb  ASHRAE_140_WEATHER_TEST.ipynb  Std140_TF_Output.xlsx  Std140_WD_Annual_Results.xlsx  WD100_OpenSimula.xlsx  bestest_960_without_openings.ipynb  case_600.json  case_610.json  case_620.json  case_640.json  case_650.json  case_Weather_Test.json
docs/: CNAME  component_list.md  component_list_HVAC_systems.md  component_list_building.md  component_list_constructions.md  component_list_files.md  component_list_schedules.md  getting_started.md  index.html  index.md  reference.md  user_guide.md
examples/: bestest_600.ipynb  bestest_600_building.ipynb  bestest_600_building.py  bestest_600_virtual_surface.ipynb  bestest_600_without_openings.ipynb  bestest_600_without_openings.py  bestest_960_virtual_surface.ipynb  debug.ipynb  (+16 more)
(+383 files in other folders)
