[project]
name = "OpenSimula"
version = "0.5.0"
requires-python = ">=3.12"
authors = [
  { name="Juan F. Coronel", email="jfc@us.es" },
]
description = "Component-based time simulation environment in Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dash>=3.2.0",
    "dash-ag-grid>=32.3.2",
    "dash-bootstrap-components>=2.0.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psychrolib>=2.5.0",
    "scipy>=1.16.2",
    "shapely>=2.1.1",
    "triangle>=20250106",
    "vedo>=2025.5.4",
]
